Graphics engine prototype: -Shader classes unified. -Now index values start always at zero, and the base vertex is specified in the draw call instead of modifying index buffer values. -Created a class for buffers. -Static model's raw data separated from static model instances. -Created a class for model aspects raw data. -Now sibling meshes and primitive types are obtaiend from asset. -Now all ids of loaded data are updated to the actual value when they already exist. -Vertex shader now uses blocks.

--- a/trunk/team/GraphicsTest/OpenGLTests/QuimeraEngineTestApp.vcxproj.filters
+++ b/trunk/team/GraphicsTest/OpenGLTests/QuimeraEngineTestApp.vcxproj.filters
@@ -34,12 +34,6 @@
     <ClInclude Include="ErrorTracingDefinitions.h">
       <Filter>Common</Filter>
     </ClInclude>
-    <ClInclude Include="QVertexShader.h">
-      <Filter>Graphics</Filter>
-    </ClInclude>
-    <ClInclude Include="QFragmentShader.h">
-      <Filter>Graphics</Filter>
-    </ClInclude>
     <ClInclude Include="QShaderCompositor.h">
       <Filter>Graphics</Filter>
     </ClInclude>
@@ -95,6 +89,18 @@
       <Filter>Resources</Filter>
     </ClInclude>
     <ClInclude Include="QTextureBlender.h">
+      <Filter>Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="QBuffer.h">
+      <Filter>Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="QStaticModelRawData.h">
+      <Filter>Resources</Filter>
+    </ClInclude>
+    <ClInclude Include="QModelAspectsRawData.h">
+      <Filter>Resources</Filter>
+    </ClInclude>
+    <ClInclude Include="QShader.h">
       <Filter>Graphics</Filter>
     </ClInclude>
   </ItemGroup>
