--- a/trunk/team/GraphicsTest/OpenGLTests/QuimeraEngineTestApp.vcxproj
+++ b/trunk/team/GraphicsTest/OpenGLTests/QuimeraEngineTestApp.vcxproj
@@ -96,7 +96,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)3rdparty\QuimeraEngine\bin\Win32\DebugSharedrt\VS2010\;$(SolutionDir)3rdparty\Boost\bin\Win32\DebugSharedrtStatic;$(SolutionDir)3rdparty\ICU\bin\Win32\ReleaseSharedrtDynamic\VS2010;$(SolutionDir)3rdparty\glew\bin\Win32\Debug\;$(SolutionDir)3rdparty\assimp\bin\Win32\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>QuimeraEngineCommon.lib;QuimeraEngineTools.lib;QuimeraEngineSystem.lib;QuimeraEngineCore.lib;icuuc.lib;icudt.lib;icuin.lib;opengl32.lib;glew32d.lib;assimpd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>QuimeraEngineCommon.lib;QuimeraEngineTools.lib;QuimeraEngineSystem.lib;QuimeraEngineCore.lib;icuuc.lib;icudt.lib;icuin.lib;opengl32.lib;GLu32.lib;glew32d.lib;assimpd.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <NoEntryPoint>false</NoEntryPoint>
       <EntryPointSymbol>
       </EntryPointSymbol>
@@ -115,6 +115,10 @@ copy $(SolutionDir)3rdparty\assimp\bin\Win32\*.* $(TargetDir)
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ErrorTracingDefinitions.h" />
+    <ClInclude Include="QBuffer.h" />
+    <ClInclude Include="QModelAspectsRawData.h" />
+    <ClInclude Include="QShader.h" />
+    <ClInclude Include="QStaticModelRawData.h" />
     <ClInclude Include="QTextureBlender.h" />
     <ClInclude Include="QImageLoader.h" />
     <ClInclude Include="QModelLoader.h" />
@@ -125,7 +129,6 @@ copy $(SolutionDir)3rdparty\assimp\bin\Win32\*.* $(TargetDir)
     <ClInclude Include="QGraphicsEngine.h" />
     <ClInclude Include="PrintSupportedPixelFormats.h" />
     <ClInclude Include="QDeviceContext.h" />
-    <ClInclude Include="QFragmentShader.h" />
     <ClInclude Include="QImage.h" />
     <ClInclude Include="QKeyboard.h" />
     <ClInclude Include="QLight.h" />
@@ -136,7 +139,6 @@ copy $(SolutionDir)3rdparty\assimp\bin\Win32\*.* $(TargetDir)
     <ClInclude Include="QStaticModel.h" />
     <ClInclude Include="QTexture2D.h" />
     <ClInclude Include="QuimeraEngineIncludesAndUsings.h" />
-    <ClInclude Include="QVertexShader.h" />
     <ClInclude Include="QWindow.h" />
     <ClInclude Include="VertexDefinitions.h" />
   </ItemGroup>
