--- a/trunk/team/GraphicsTest/OpenGLTests/QuimeraEngineTestApp.vcxproj
+++ b/trunk/team/GraphicsTest/OpenGLTests/QuimeraEngineTestApp.vcxproj
@@ -120,6 +120,7 @@ copy $(SolutionDir)3rdparty\assimp\bin\Win32\*.* $(TargetDir)
     <ClInclude Include="QAlphaBlender.h" />
     <ClInclude Include="QModelAspectsRawData.h" />
     <ClInclude Include="QShader.h" />
+    <ClInclude Include="QShadingPipeline.h" />
     <ClInclude Include="QStaticModelRawData.h" />
     <ClInclude Include="QTextureBlender.h" />
     <ClInclude Include="QImageLoader.h" />
@@ -140,6 +141,7 @@ copy $(SolutionDir)3rdparty\assimp\bin\Win32\*.* $(TargetDir)
     <ClInclude Include="QShaderCompositor.h" />
     <ClInclude Include="QStaticModel.h" />
     <ClInclude Include="QTexture2D.h" />
+    <ClInclude Include="QuimeraEngine.h" />
     <ClInclude Include="QuimeraEngineIncludesAndUsings.h" />
     <ClInclude Include="QViewport.h" />
     <ClInclude Include="QWindow.h" />
@@ -150,7 +152,10 @@ copy $(SolutionDir)3rdparty\assimp\bin\Win32\*.* $(TargetDir)
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="QDeviceContext.cpp" />
     <ClCompile Include="QDeviceContext_PixelFormats.cpp" />
+    <ClCompile Include="QGraphicsEngine.cpp" />
+    <ClCompile Include="QImageLoader.cpp" />
     <ClCompile Include="QKeyboard.cpp" />
+    <ClCompile Include="QuimeraEngine.cpp" />
     <ClCompile Include="QWindow.cpp" />
     <ClCompile Include="VertexDefinitions.cpp" />
   </ItemGroup>
