--- a/trunk/team/GraphicsTest/OpenGLTests/QuimeraEngineTestApp.vcxproj.filters
+++ b/trunk/team/GraphicsTest/OpenGLTests/QuimeraEngineTestApp.vcxproj.filters
@@ -148,6 +148,12 @@
     <ClCompile Include="QImageLoader.cpp">
       <Filter>Resources</Filter>
     </ClCompile>
+    <ClCompile Include="QShadingPipeline.cpp">
+      <Filter>Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="QAspect.cpp">
+      <Filter>Graphics</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\FragmentShader.glsl">
