--- a/trunk/team/GraphicsTest/OpenGLTests/QuimeraEngineTestApp.vcxproj
+++ b/trunk/team/GraphicsTest/OpenGLTests/QuimeraEngineTestApp.vcxproj
@@ -123,6 +123,7 @@ copy $(SolutionDir)3rdparty\assimp\bin\Win32\*.* $(TargetDir)
     <ClInclude Include="QAbstractTexture2D.h" />
     <ClInclude Include="QAbstractTexture2DArray.h" />
     <ClInclude Include="QAbstractTexture3D.h" />
+    <ClInclude Include="QBaseTextureBuffer.h" />
     <ClInclude Include="QAbstractTextureCube.h" />
     <ClInclude Include="QBaseTexture.h" />
     <ClInclude Include="QBaseTextureArray.h" />
@@ -161,6 +162,7 @@ copy $(SolutionDir)3rdparty\assimp\bin\Win32\*.* $(TargetDir)
     <ClInclude Include="QStaticModel.h" />
     <ClInclude Include="QTexture2D.h" />
     <ClInclude Include="QAbstractTextureCubeArray.h" />
+    <ClInclude Include="QTextureBuffer.h" />
     <ClInclude Include="QTextureCube.h" />
     <ClInclude Include="QTextureCubeArray.h" />
     <ClInclude Include="QuimeraEngine.h" />
@@ -174,6 +176,7 @@ copy $(SolutionDir)3rdparty\assimp\bin\Win32\*.* $(TargetDir)
     <ClCompile Include="Boost_ThrowException.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="QAspect.cpp" />
+    <ClCompile Include="QBuffer.cpp" />
     <ClCompile Include="QDeviceContext.cpp" />
     <ClCompile Include="QFramebuffer.cpp" />
     <ClCompile Include="QGraphicsEngine.cpp" />
