--- a/trunk/team/GraphicsTest/OpenGLTests/QuimeraEngineTestApp.vcxproj.filters
+++ b/trunk/team/GraphicsTest/OpenGLTests/QuimeraEngineTestApp.vcxproj.filters
@@ -109,9 +109,6 @@
     <ClInclude Include="QPixelFormatDescriptor.h">
       <Filter>Graphics</Filter>
     </ClInclude>
-    <ClInclude Include="EQTextureFormat.h">
-      <Filter>Graphics</Filter>
-    </ClInclude>
     <ClInclude Include="SQEnumerationToOpenGLConverter.h">
       <Filter>Common</Filter>
     </ClInclude>
@@ -187,6 +184,15 @@
     <ClInclude Include="QTextureCubeArray.h">
       <Filter>Resources</Filter>
     </ClInclude>
+    <ClInclude Include="EQTextureFormat.h">
+      <Filter>Resources</Filter>
+    </ClInclude>
+    <ClInclude Include="QTextureBuffer.h">
+      <Filter>Resources</Filter>
+    </ClInclude>
+    <ClInclude Include="QBaseTextureBuffer.h">
+      <Filter>Resources</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
@@ -221,6 +227,9 @@
       <Filter>Resources</Filter>
     </ClCompile>
     <ClCompile Include="QAspect.cpp">
+      <Filter>Resources</Filter>
+    </ClCompile>
+    <ClCompile Include="QBuffer.cpp">
       <Filter>Resources</Filter>
     </ClCompile>
   </ItemGroup>
