Graphics engine prototype: -QWindow improved a lot. Fullscreen and windowed mode. Window status control. Event management. -Now it's possible to copy to and from textures. -Graphics engine and window set up improved. -Writing and reading texture regions now flip Y axis (Top).

--- a/trunk/team/GraphicsTest/OpenGLTests/QuimeraEngineTestApp.vcxproj
+++ b/trunk/team/GraphicsTest/OpenGLTests/QuimeraEngineTestApp.vcxproj
@@ -170,6 +170,7 @@ copy $(SolutionDir)3rdparty\assimp\bin\Win32\*.* $(TargetDir)
     <ClInclude Include="QViewport.h" />
     <ClInclude Include="QWindow.h" />
     <ClInclude Include="SQEnumerationToOpenGLConverter.h" />
+    <ClInclude Include="SQSystemManager.h" />
     <ClInclude Include="VertexDefinitions.h" />
   </ItemGroup>
   <ItemGroup>
